[gd_scene load_steps=4 format=3 uid="uid://d4hb1y3cwktuf"]

[ext_resource type="Script" path="res://Enemies/Koala/KoalaProjectileScript.gd" id="1_jjq67"]
[ext_resource type="Texture2D" uid="uid://ibd033qqqivi" path="res://Assests/Enemies/stick.png" id="2_aixnx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wudmi"]
size = Vector2(56, 48)

[node name="KoalaProjectile" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_jjq67")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_aixnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_wudmi")

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
